--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Website criado para compras de roupas que cabem no seu bolso, com estilo!"
     />
     <title>Minhas Roupas</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
